--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-1
     <link rel="stylesheet" href="components/main.css">
     <script defer src="components/main.js"></script>
 
-    <title>Register Page!</title>
+    <title>Account</title>
 
 </head>
 <body>
