--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="components/main.css">
     <script defer src="components/main.js"></script>
 
@@ -14,14 +17,17 @@
 
     <div id="container">
         <div class="website__content">
-            <h1>Go with us!</h1>
+            <span class="material-icons icon">rocket</span>
+            <h1>Join Us</h1>
+            <span class="about__us__text">Do you think about a job as a frontend developer?</span>
+            <input class="about__us__btn" type="button" value="About us">
         </div>
 
         <form class="login__form">
             <h1>Login</h1>
-            <input type="text" name="username" id="input__login__username">
-            <input type="password" name="password" id="input__login__password">
-            <input type="submit" id="input__login__submit" value="submit">
+            <input type="text" name="username" class="input" placeholder="Name">
+            <input type="password" name="password" class="input" placeholder="Password">
+            <input type="submit" class="submit" value="Login">
         </form>
     </div>
 
