--- a/index.html
+++ b/index.html
@@ -28,14 +28,19 @@
 
 			<form class="login__form">
 				<h1>Login</h1>
-				<input type="text" name="username" class="input" placeholder="Name" />
+				<input
+					type="text"
+					name="username"
+					class="input name"
+					placeholder="Name"
+				/>
 				<input
 					type="password"
 					name="password"
-					class="input"
+					class="input password"
 					placeholder="Password"
 				/>
-				<input type="submit" class="submit" value="Login" />
+				<input type="button" class="submit" value="Login" />
 			</form>
 
 			<div class="profile__content">
